syntax = "proto3";

package stwartchain.faucet;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "stwartchain/faucet/params.proto";
import "stwartchain/faucet/tokens.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/faucet/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateTokens (MsgCreateTokens) returns (MsgCreateTokensResponse);
  rpc UpdateTokens (MsgUpdateTokens) returns (MsgUpdateTokensResponse);
  rpc DeleteTokens (MsgDeleteTokens) returns (MsgDeleteTokensResponse);
  rpc Issue        (MsgIssue       ) returns (MsgIssueResponse       );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                            "authority";
  option           (amino.name) = "stwartchain/x/faucet/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateTokens {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string denom   = 2;
  string amount  = 3;
}

message MsgCreateTokensResponse {
  uint64 id = 1;
}

message MsgUpdateTokens {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
  string denom   = 3;
  string amount  = 4;
}

message MsgUpdateTokensResponse {}

message MsgDeleteTokens {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteTokensResponse {}

message MsgIssue {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string address = 2;
}

message MsgIssueResponse {}

